--- a/assets/css/tooplate-style.css
+++ b/assets/css/tooplate-style.css
@@ -60,13 +60,14 @@ img {
     overflow: hidden;
 }
 
-ul {
+.main-menu, .social-icons{
     padding: 0;
     margin: 0;
-    list-style: none;
+        list-style: none;
 }
 
-ul li {
+
+.social-network ul li {
     display: inline-block;
 }
 
@@ -374,8 +375,8 @@ button:hover {
 /* Left & Right Post */
 
 .right-image-post {
-    margin-bottom: 60px;
-    padding-bottom: 60px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
     border-bottom: 2px solid rgba(250, 250, 250, 0.1);
 }
 
