--- a/assets/css/tooplate-style.css
+++ b/assets/css/tooplate-style.css
@@ -56,7 +56,7 @@ h4 {
 }
 
 img {
-    width: 100%;
+    /* width: 100%; */
     overflow: hidden;
 }
 
@@ -520,6 +520,22 @@ button:hover {
     height: 100%;
     border-radius: 5px;
 }
+.thumbnails img {
+    flex-grow: 1;
+    height: 200px;
+    margin: 2px;
+    border-radius: 2px;
+    overflow: hidden;
+}
+
+.img_container {
+    margin: 10px;
+}
+
+.img_container figcaption{
+    max-width: 70%;
+}
+
 
 .lazyload {
     background: #f7f7f7;
